2011-08-02  Kristóf Kosztyó  <Kosztyo.Kristof@stud.u-szeged.hu>

        [Qt] tst_QWebElement::style() fails because QWebElement::CascadedStyle doesn't work as expected
        https://bugs.webkit.org/show_bug.cgi?id=65244

        Reviewed by Csaba Osztrogonác.

        * tests/qwebelement/tst_qwebelement.cpp: Mark failing test case as expected fail
        (tst_QWebElement::style):

2011-08-01  Kristóf Kosztyó  <Kosztyo.Kristof@stud.u-szeged.hu>

        [Qt] Fix tst_QWebPage::loadHtml5Video() API test
        https://bugs.webkit.org/show_bug.cgi?id=65452

        Reviewed by Csaba Osztrogonác.

        * tests/qwebpage/tst_qwebpage.cpp: Mark failing test case as expected fail
        (tst_QWebPage::loadHtml5Video):

2011-07-30  Patrick Gansterer  <paroga@webkit.org>

        Remove inclusion of MainThread.h from Threading.h
        https://bugs.webkit.org/show_bug.cgi?id=65081

        Reviewed by Darin Adler.

        Add missing include statements for MainThread.

        * Api/qwebpage.cpp:

2011-07-27  Benjamin Poulain  <benjamin@webkit.org>

        [WK2][Qt] Move from QGraphicsView to Qt Scene Graph
        https://bugs.webkit.org/show_bug.cgi?id=62969

        Reviewed by Andreas Kling.

        Co-authored with Simon Hausmann  <simon.hausmann@nokia.com>

        Add the declarative dependency to link WebKit.

        * QtWebKit.pro:

2011-07-27  Caio Marcelo de Oliveira Filho  <caio.oliveira@openbossa.org>

        [Qt] QtWebkit never finishes loading sites when they are loaded after an initial QUrl fails to load.
        https://bugs.webkit.org/show_bug.cgi?id=61328

        Reviewed by Andreas Kling.

        Change the hooks in FrameLoaderClient we use for emitting signals. Instead of
        emitting signals in the progress notification functions, we use the
        dispatchDid{Start,Finish,Fail}* functions. The main reason behind this change is
        that loading code is prepared to handle load() when inside those functions.
